--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-    <meta charset="utf-8i" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
-    <title>Note.js</title>
+    <title>Auto Escola Senna</title>
   </head>
 </html>
 
